--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,20 @@
             <artifactId>json</artifactId>
             <version>20210307</version>
         </dependency>
+
+        <!-- Log4j dependencies -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
